# h5demos

h5demos/: README.md  beammatrix_orig.cc
h5demos/dk2nu/: DKDict.cxx  DKDict_rdict.pcm  Makefile
h5demos/dk2nu/src/: beammatrix.C  beammatrix.C~  scanvolumelist.C
h5demos/highfive/: CMakeLists.txt  ConvertHDF5.cc  ConvertHDF5.cc~  ConvertHDF5_MPI.cc  ConvertHDF5_MPI_ver2.cc  ConvertHDF5_MPI_ver3.cc  ConvertHDF5_MPI_ver4.cc  README.txt  beammatrix.cc~  h5_setup_mpi.h  h5_write_1D_chars.h  h5_write_1D_chars_MPI.h  h5_write_chars.h  h5_write_chars_MPI.h  h5p_write_1D_chars.h  read_h5_deserialize.cc  read_h5_deserialize_MPI_1D.cc  read_h5_deserialize_all.cc  serialize_dataprods.h  setup_h5demos.sh  setup_h5demos.sh~  setup_lcrc.sh  setup_stuff.sh  test_deserialize.cc  test_parallel_hdf5.cc  test_parallel_token.cc  utilities.h
h5demos/highfive/rfiles/: For_TMVA_DATA_minervame5A6A6B_kludged_red.root  For_TMVA_DATA_minervame5A6A6B_kludged_small_stats.root  copyTree.C
h5demos/highfive/trace_io/: README.txt  analyze_io_with_timestamp.py.ipynb
h5demos/trace_io/: analyze_io.py
